<resources>
    <string name="app_name">Burgerator</string>
    <string name="action_settings">Settings</string>

    <string name="yelp">YELP ACTIVITY</string>
    <string name="find_a_burger">.find a burger</string>
    <string name="burger_feed">[Burger Feed]</string>
    <string name="rate_a_burger">[Rate A Burger]</string>
    <string name="top_burgers">[Top Burgers]</string>
    <string name="profile">[Profile]</string>


    <string name="restaurant_name">restaurant name</string>
    <string name="pick_your_restaurant">pick your restaurant</string>
    <string name="prep">prep?</string>
    <string name="taste">Taste</string>
    <string name="toppings">Toppings</string>
    <string name="bun">Bun</string>
    <string name="would_you_come_back_for_the_burger">Would you come back for the burger?</string>
    <string name="please_enter_correctly">Please enter burger name exactly as it appears on the menu</string>
    <string name="burger_name">Burger name</string>

    <string name="distance_button">distance</string>

    <string name="Fshare">F share</string>
    <string name="Tshare">T share</string>

    <string name="title_activity_burgerator">.burgerator.</string>
    <string name="title_activity_find_aburger">.find a burger.</string>
    <string name="title_activity_burger_feed">.burger feed.</string>
    <string name="title_activity_burger_rating">.burger rating.</string>
    <string name="title_activity_top_burgers">.top burgers.</string>
    <string name="title_activity_profile">.profile.</string>
    <string name="title_activity_ranking">.burger rankings</string>
    <string name="title_activity_setting">.settings</string>
    <string name="title_activity_restaurant_view">.restaurant view</string>
    <string name="title_activity_select_burger">.select burger</string>
    <string name="title_activity_select_restaurant">.select restaurant</string>
    <string name="title_activity_cheese">.cheese</string>
    <string name="title_activity_prep">.prep</string>

    <string name="in_dev">IN DEVELOPMENT</string>

    <string name="dialog_box_title">burgerator</string>
    <string name="open_photo">Open Photos</string>
    <string name="open_camera">Open Camera</string>
    <string name="cancel">Cancel</string>

    <string name="user_info">user info</string>
    <string name="connect_to_facebook">connect facebook</string>
    <string name="connect_to_twitter">connect twitter</string>
    <string name="find_a_bug">find a bug in burgerator?</string>
    <string name="contact_us">contact us</string>
    <string name="rate_app">rate app</string>
    <string name="log_out">log out</string>

    <string name="done">Done</string>
    <string name="dont_see_burger">Don\'t see your burger?</string>
    <string name="rankings_to_go">rankings to go</string>
    <string name="what_kind_of_cheese">What cheese did you order on your burger?</string>
    <string name="submit">submit</string>
    <string name="prep_activity">based on your preferences, how was your burger prepared?</string>

    <string name="bun_ratio">burger to bun ratio</string>
    <string name="bun_heavy">bun heavy</string>
    <string name="balanced">balanced</string>
    <string name="meat_heavy">meat heavy</string>

    <string name="email_sigup">create an account</string>
    <string name="user_email">email address</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="password">password</string>
    <string name="zip_code">zip code</string>

    <string name="cheese_button">cheese?</string>
    <string name="ratio_button">ratio?</string>

    <string name="facebook_app_id">186446715056507</string>
    <string name="title_activity_fb_test">FB_test</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCoxaXSm0I58OFbo4NPVx1cIBx5JgNWs6I</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
