<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/tv_taste" android:text="@string/taste" />

    <include layout="@layout/seek_bar_taste"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/tv_toppings" android:text="@string/toppings" />

    <include layout="@layout/seek_bar_toppings"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/tv_bun" android:text="@string/bun" />

    <include layout="@layout/seek_bar_bun"/>


</LinearLayout>