<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:background="@drawable/ratio_popup"
    android:layout_centerInParent="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bun_ratio_text"
        android:text="@string/bun_ratio"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:id="@+id/heavy_text"
        android:text="@string/bun_heavy"
        android:textColor="@color/black"
        android:layout_below="@+id/bun_ratio_text"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:id="@+id/balanced_text"
        android:text="@string/balanced"
        android:textColor="@color/black"
        android:layout_below="@+id/bun_ratio_text"
        android:layout_toRightOf="@+id/heavy_text"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:id="@+id/meat_text"
        android:text="@string/meat_heavy"
        android:textColor="@color/black"
        android:layout_below="@+id/bun_ratio_text"
        android:layout_toRightOf="@+id/balanced_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:id="@+id/img_bun_heavy"
        android:background="@drawable/bun_heavy"
        android:layout_below="@+id/heavy_text"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:id="@+id/img_balanced"
        android:background="@drawable/bun_balanced"
        android:layout_below="@+id/heavy_text"
        android:layout_toRightOf="@+id/img_bun_heavy"
        android:layout_marginLeft="20dp"/>

    <Button
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:id="@+id/img_meat_heavy"
        android:background="@drawable/meat_heavy"
        android:layout_below="@+id/heavy_text"
        android:layout_toRightOf="@+id/img_balanced"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>