<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:nestedScrollingEnabled="false"
    android:gravity="top"
    android:scrollIndicators="right"
    android:minHeight="600dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <include android:id="@+id/red_banner"
            layout="@layout/burger_ranking_banner"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="60dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/burgerator_icon"
                    android:id="@+id/burger"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/divider"
                    android:id="@+id/divider"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:hint="@string/email_sigup"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:id="@+id/tv_email"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:maxWidth="300dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/email_button_border"
                    android:hint="@string/user_email"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/email_button_border"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:hint="@string/first_name"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:id="@+id/et_first_name"
                    android:maxWidth="300dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/email_button_border"
                    android:layout_marginTop="5dp"
                    android:hint="@string/last_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:id="@+id/et_last_name"
                    android:maxWidth="300dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/email_button_border"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:id="@+id/et_password"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxWidth="300dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/email_button_border"
                    android:layout_marginTop="5dp"
                    android:hint="@string/zip_code"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:id="@+id/et_zip_code"
                    android:singleLine="true"
                    android:imeOptions="actionGo"
                    android:inputType="number"
                    android:maxWidth="300dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>